fixed bug where cropping would continue after leaving edit mode. The data tree and other settings on the left hand side now have an overlay that prevents clicking when cropping is in effect.

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,16 @@ select{
 }
 
 /* Styling for left-hand control panel */
+.controlsOverlay{
+	display: none;
+	position:absolute;
+	width:250px;
+	height:98vh;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: rgba(0,0,0,0.7);
+	z-index: 102;
+}
 .controls{
 	width: 250px;
 	height: 98vh;
